# Tiktok-Auto-Embed

./: Dockerfile  PrivacyPolicy.txt  README.md  docker-entrypoint.sh  main.py  norepl.py  pyproject.toml  requirements.txt  runtime.txt  selfhostNoReplitDB.py  selfhostReplit.py
.github/workflows/: docker-ghcr.yml
DigitalOcean/: main.py.txt
