[tool.poetry]
name = "repl_python3_download-tiktok-2"
version = "0.1.0"
description = ""
authors = ["theohalpern <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
pyppeteer = "^0.2.5"
"discord.py" = "^1.7.2"
replit = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
